:sparkles: refactor project
